--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -2874,7 +2874,7 @@
    "id": "251baf72-57f1-44b9-b3c0-8b81b4349621",
    "metadata": {},
    "source": [
-    "Alternatively, you can use the [autoreload](https://ipython.org/ipython-doc/3/config/extensions/autoreload.html) functionality Jupyter to make sure updates to our code reflect in the notebook."
+    "Alternatively, you can use the [autoreload](https://ipython.org/ipython-doc/3/config/extensions/autoreload.html) functionality in Jupyter to make sure updates to our code reflect in the notebook."
    ]
   },
   {
