--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -59,11 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7a64ff7a-970f-4c77-a417-dfa82ddc7646",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 2,
+   "id": "46f44f9c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv"
@@ -100,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0ed65d04-7b84-4207-9c93-43d6442f4fe8",
    "metadata": {
     "tags": []
@@ -109,10 +107,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7e67c1d3-7fd9-4293-8eb1-6d3700c8953c",
    "metadata": {
     "tags": []
@@ -135,12 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "381e1ccb-1b25-4c73-b9cb-dafef0a2c669",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "id": "414f71d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'ACCESS_TOKEN'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# do not print this variable anywhere if the notebook is going on GitHub\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m ACCESS_TOKEN = \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mACCESS_TOKEN\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<frozen os>:679\u001b[39m, in \u001b[36m__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'ACCESS_TOKEN'"
+     ]
+    }
+   ],
    "source": [
     "# do not print this variable anywhere if the notebook is going on GitHub\n",
     "ACCESS_TOKEN = os.environ['ACCESS_TOKEN']"
@@ -3444,7 +3453,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "week-6",
+   "display_name": "h501-main",
    "language": "python",
    "name": "python3"
   },
